dev path can also define a file name where the replacements are listed