@@ -37,6 +37,7 @@
                           --add-opens jamal.test/javax0.jamal.test.tools.junit=ALL-UNNAMED
                           --add-opens jamal.test/javax0.jamal.test.examples=ALL-UNNAMED
                           --add-opens jamal.test/javax0.jamal.test.statecheck=ALL-UNNAMED
+                          --add-opens jamal.test/javax0.jamal.test.devpath=ALL-UNNAMED
                           --add-opens jamal.engine/javax0.jamal.engine=ALL-UNNAMED
             </argLine>
                 </configuration>
